tests/invalid/strict_typing/phpdoc_return_generic_array_matches.php
<?php

class Test {
    /**
     * @return array<string, int>
     */
    public function getMap() {
        return ["key1" => 123, "key2" => 456];
    }

    /**
     * @return array<int, string>
     */
    public function getNames() {
        return [0 => "Alice", 1 => "Bob"];
    }
}
